force-app/main/default/objects/Field_Service_Settings__c/fields/Service_Appointment_In_Progress_Status__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment_In_Progress_Status__c</fullName>
    <label>Service Appointment In Progress Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>