force-app/main/default/objects/Field_Service_Settings__c/fields/Service_Notification_Email_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Service_Notification_Email_Template_Id__c</fullName>
    <description>Id of the template used to email customers for the 24/48 notification before a service visit</description>
    <label>Service Notification Email Template Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>