force-app/main/default/objects/Field_Service_Settings__c/fields/Service_Start__c.field-meta.xml
<CustomField>
    <fullName>Service_Start__c</fullName>
    <inlineHelpText>For completely new Orders (eg: Signed today), how many buffer days are allocated before work can start</inlineHelpText>
    <label>Service Start</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>