force-app/main/default/objects/Field_Service_Settings__c/fields/ServiceAppointmentDueTime__c.field-meta.xml
<CustomField>
    <fullName>ServiceAppointmentDueTime__c</fullName>
    <label>ServiceAppointmentDueTime</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>