force-app/main/default/objects/Field_Service_Settings__c/fields/ServiceAppointmentParentQueryId__c.field-meta.xml
<CustomField>
    <fullName>ServiceAppointmentParentQueryId__c</fullName>
    <label>ServiceAppointmentParentQueryId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>