force-app/main/default/objects/Field_Service_Settings__c/fields/ServiceReportTemplateId__c.field-meta.xml
<CustomField>
    <fullName>ServiceReportTemplateId__c</fullName>
    <label>ServiceReportTemplateId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>