force-app/main/default/objects/Field_Service_Settings__c/fields/Shopping_Cart_Order_Draft_Stage__c.field-meta.xml
<CustomField>
    <fullName>Shopping_Cart_Order_Draft_Stage__c</fullName>
    <label>Shopping Cart Order Draft Stage</label>
    <length>15</length>
    <type>Text</type>
</CustomField>