force-app/main/default/objects/Field_Service_Settings__c/fields/Shopping_Cart_Order_Record_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>Shopping_Cart_Order_Record_Type_Id__c</fullName>
    <label>Shopping Cart Order Record Type Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>