force-app/main/default/objects/Field_Service_Settings__c/fields/Site_Contact_Ticket_Subject__c.field-meta.xml
<CustomField>
    <fullName>Site_Contact_Ticket_Subject__c</fullName>
    <label>Site Contact Ticket Subject</label>
    <length>50</length>
    <type>Text</type>
</CustomField>