force-app/main/default/objects/Field_Service_Settings__c/fields/Site_Survey_Case_Rejected_Status__c.field-meta.xml
<CustomField>
    <fullName>Site_Survey_Case_Rejected_Status__c</fullName>
    <label>Site Survey Case Rejected Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>