force-app/main/default/objects/Field_Service_Settings__c/fields/Site_Survey_Female_Skill_ID__c.field-meta.xml
<CustomField>
    <fullName>Site_Survey_Female_Skill_ID__c</fullName>
    <label>Site Survey Female Skill ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>