force-app/main/default/objects/Field_Service_Settings__c/fields/Site_Survey_Reviewed_Status__c.field-meta.xml
<CustomField>
    <fullName>Site_Survey_Reviewed_Status__c</fullName>
    <defaultValue>&apos;Reviewed&apos;</defaultValue>
    <label>Site Survey Reviewed Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>