force-app/main/default/objects/Field_Service_Settings__c/fields/Site_Survey_Skills_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Site_Survey_Skills_Prefix__c</fullName>
    <label>Site Survey Skills Prefix</label>
    <length>15</length>
    <type>Text</type>
</CustomField>