force-app/main/default/objects/Field_Service_Settings__c/fields/Standard_Pricebook_Id__c.field-meta.xml
<CustomField>
    <fullName>Standard_Pricebook_Id__c</fullName>
    <label>Standard Pricebook Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>