force-app/main/default/objects/Field_Service_Settings__c/fields/Standing_Order_Custom_Permission_Id__c.field-meta.xml
<CustomField>
    <fullName>Standing_Order_Custom_Permission_Id__c</fullName>
    <label>Standing Order Custom Permission Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>