force-app/main/default/objects/Field_Service_Settings__c/fields/Status_Value_for_Removal_of_a_Product__c.field-meta.xml
<CustomField>
    <fullName>Status_Value_for_Removal_of_a_Product__c</fullName>
    <label>Status Value for Removal of a Product</label>
    <length>15</length>
    <type>Text</type>
</CustomField>