force-app/main/default/objects/Field_Service_Settings__c/fields/System_Administrator_Profile_Id__c.field-meta.xml
<CustomField>
    <fullName>System_Administrator_Profile_Id__c</fullName>
    <label>System Administrator Profile Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>