force-app/main/default/objects/Field_Service_Settings__c/fields/Ticket_Closed_Status__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Closed_Status__c</fullName>
    <label>Ticket Closed Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>