force-app/main/default/objects/Field_Service_Settings__c/fields/Ticket_Emergency_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Emergency_Record_Type__c</fullName>
    <label>Ticket Emergency Record Type</label>
    <length>18</length>
    <type>Text</type>
</CustomField>