force-app/main/default/objects/Field_Service_Settings__c/fields/Ticket_PO_Not_Returned_Subject__c.field-meta.xml
<CustomField>
    <fullName>Ticket_PO_Not_Returned_Subject__c</fullName>
    <label>Ticket PO Not Returned Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>