force-app/main/default/objects/Field_Service_Settings__c/fields/Ticket_Priority_High__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Priority_High__c</fullName>
    <label>Ticket Priority High</label>
    <length>255</length>
    <type>Text</type>
</CustomField>