force-app/main/default/objects/Field_Service_Settings__c/fields/Ticket_Type_Customer_Complaint__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Type_Customer_Complaint__c</fullName>
    <label>Ticket Type Customer Complaint</label>
    <length>30</length>
    <type>Text</type>
</CustomField>