force-app/main/default/objects/Field_Service_Settings__c/fields/Ticket_Type_for_Customer_Retention__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Type_for_Customer_Retention__c</fullName>
    <label>Ticket Type for Customer Retention</label>
    <length>32</length>
    <type>Text</type>
</CustomField>