force-app/main/default/objects/Field_Service_Settings__c/fields/Ticket_Type_for_New_Lead__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Type_for_New_Lead__c</fullName>
    <label>Ticket Type for New Lead</label>
    <length>15</length>
    <type>Text</type>
</CustomField>