force-app/main/default/objects/Field_Service_Settings__c/fields/Ticket_Type_for_Sales_Inquiry__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Type_for_Sales_Inquiry__c</fullName>
    <label>Ticket Type for Sales Inquiry</label>
    <length>100</length>
    <type>Text</type>
</CustomField>