force-app/main/default/objects/Field_Service_Settings__c/fields/Ticket_Type_for_Site_Survey__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Type_for_Site_Survey__c</fullName>
    <label>Ticket Type for Site Survey</label>
    <length>32</length>
    <type>Text</type>
</CustomField>