force-app/main/default/objects/Field_Service_Settings__c/fields/Type_Value_for_FollowUp_WorkOrder__c.field-meta.xml
<CustomField>
    <fullName>Type_Value_for_FollowUp_WorkOrder__c</fullName>
    <label>Type Value for FollowUp WorkOrder</label>
    <length>15</length>
    <type>Text</type>
</CustomField>