force-app/main/default/objects/Field_Service_Settings__c/fields/VMI_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>VMI_Product_Name__c</fullName>
    <label>VMI Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>