force-app/main/default/objects/Field_Service_Settings__c/fields/Warehouse_Technician_Picklist_Value__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Technician_Picklist_Value__c</fullName>
    <label>Warehouse Technician Picklist Value</label>
    <length>15</length>
    <type>Text</type>
</CustomField>