force-app/main/default/objects/Field_Service_Settings__c/fields/Work_Order_Chatter_File_Extensions__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Chatter_File_Extensions__c</fullName>
    <inlineHelpText>Comma separated list of file extensions that will be included in the Work Order File Automation process.
Leave blank or set to &quot;All&quot; to include all file types</inlineHelpText>
    <label>Work Order Chatter File Extensions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>