force-app/main/default/objects/Field_Service_Settings__c/fields/Work_Order_Line_Item_CannotComp_Status__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Line_Item_CannotComp_Status__c</fullName>
    <description>Work Order Line Item Cannot Complete Status</description>
    <label>Work Order Line Item Cannot Comp Sta</label>
    <length>15</length>
    <type>Text</type>
</CustomField>