force-app/main/default/objects/Field_Service_Settings__c/fields/Work_Order_Medium_Priority__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Medium_Priority__c</fullName>
    <label>Work Order Medium Priority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>