force-app/main/default/objects/Field_Service_Settings__c/fields/Work_Order_Missed_Service_Status__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Missed_Service_Status__c</fullName>
    <label>Work Order Missed Service Status</label>
    <length>32</length>
    <type>Text</type>
</CustomField>