force-app/main/default/objects/Field_Service_Settings__c/fields/Work_Order_Scheduled_Status__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Scheduled_Status__c</fullName>
    <label>Work Order Scheduled Status</label>
    <length>15</length>
    <type>Text</type>
</CustomField>