force-app/main/default/objects/Field_Service_Settings__c/fields/Work_Orders_In_Advance__c.field-meta.xml
<CustomField>
    <fullName>Work_Orders_In_Advance__c</fullName>
    <inlineHelpText>How many days in advance to schedule to work orders</inlineHelpText>
    <label>Work Orders In Advance</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>