force-app/main/default/objects/Field_Service_Settings__c/fields/Work_Type_Hours_Duration__c.field-meta.xml
<CustomField>
    <fullName>Work_Type_Hours_Duration__c</fullName>
    <label>Work Type Hours Duration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>