force-app/main/default/objects/Field_Service_Settings__c/fields/Working_Hour_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Working_Hour_End_Time__c</fullName>
    <inlineHelpText>This field has to be in the formal &quot;hh:mm&quot;</inlineHelpText>
    <label>Working Hour End Time</label>
    <length>5</length>
    <type>Text</type>
</CustomField>