force-app/main/default/objects/Field_Service_Settings__c/fields/WorkOrderRoomQueryId__c.field-meta.xml
<CustomField>
    <fullName>WorkOrderRoomQueryId__c</fullName>
    <label>WorkOrderRoomQueryId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>